# codex-test

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/samples/: sales.csv
scripts/: dev-check.ps1
src/app/: __init__.py  math_utils.py  sales_cli.py
tests/app/: test_math_utils.py  test_sales_cli.py
