[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-test"
version = "0.1.0"
description = "Minimal Python package with sales aggregation CLI"
requires-python = ">=3.10"

[project.scripts]
sales-cli = "app.sales_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DTZ"]
ignore = ["W503"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=xml --cov-fail-under=85"
